<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTarefas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:padding="16dp"
        android:text="@string/text_editar"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_titulo" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_descricao" />

    <TextView
        android:id="@+id/edtDataVencimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_data_vencimento"
        android:text="@string/text_selecione_data"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground" />

    <Spinner
        android:id="@+id/spinnerPrioridade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/text_alterar" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/text_excluir" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/text_cancelar" />
</LinearLayout>
