<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTarefas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:padding="16dp"
        android:text="@string/text_tarefas"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnConcluidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/text_tarefas_concluidas" />

    <ListView
        android:id="@+id/List_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTarefas"
        android:layout_marginTop="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/text_adicionar_tarefa"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="#5E80A2"
        app:backgroundTintMode="screen" />

</RelativeLayout>
